<resources>
    <string name="app_name">Kalendreo</string>

    <string name="save">Save</string>

    <!-- Strings related to login -->
    <string name="action_sign_in_short">Sign in</string>

    <string name="login_with_google">Log In With Google</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters.</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up.</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_signup">Sign Up</string>

    <!-- Facebook Auth -->
    <string name="facebook_app_id">2010983615784764</string>
    <string name="fb_login_protocol_scheme">fb2010983615784764</string>
    <!-- End Facebook Auth-->


    <!-- Calendar -->
    <string name="title_activity_calendar_view">CalendarView</string>
    <string name="no_event_scheduled">No event scheduled for this day.</string>
    <string name="no_event_text">"No event scheduled for the "</string>
    <string name="some_event_text">" event(s) scheduled for the "</string>

    <!-- Create Event -->
    <string name="datePicker">Start Date</string>
    <string name="HourPicker">00:00</string>
    <string name="DebutDateHeure">Starting Day and Hour</string>
    <string name="FinDateHeure">Ending Day and Hour</string>
    <string name="DateFin">End Date</string>
    <string name="EndHour">00:00</string>
    <string name="select_category">Select Category of Event</string>
    <string name="event_category">Category of Event</string>
    <string name="ValiderEvent">Create</string>
    <string name="EventTitle">Event Title</string>
    <string name="CreateEvent">Create an Event</string>
    <string name="log_out">Log out</string>
    <string name="logout_message">You have been disconnected</string>
    <string name="ViewCalendar">View Calendar</string>

    <string name="select_date">Select a date</string>
    <string name="start_date_time">Starting datetime</string>
    <string name="end_date_time">Ending datetime</string>
    <string name="private_event">Private event</string>
    <string name="public_event">Public event</string>

    <string name="btn_friends">Friends</string>

    <string-array name="event_categories">
        <item>Fun</item>
        <item>Serious</item>
        <item>Silent</item>
        <item>Very Important</item>
        <item>Work</item>
    </string-array>

    <!-- INTENTS EXTRA KEYS -->
    <string name="EXTRA_FACEBOOK_AUTH_TOKEN">com.example.sebsp.kalendreo.extra.facebook_auth_token</string>
    <string name="EXTRA_FACEBOOK_USER_ID">com.example.sebsp.kalendreo.extra.facebook_user_id</string>
    <string name="EXTRA_FACEBOOK_USER_NAME">com.example.sebsp.kalendreo.extra.facebook_user_name</string>
    <string name="EXTRA_FACEBOOK_FRIENDS_JSON">com.example.sebsp.kalendreo.extra.facebook_friends_json</string>
    <string name="EXTRA_EVENT_ID">com.example.sebsp.kalendreo.extra.event_id</string>
    <string name="EXTRA_START_DATE_SELECTED">com.example.sebsp.kalendreo.extra.start_date_selected</string>
    <!-- END INTENTS EXTRA KEYS-->

    <!-- Shared Preferences Files  -->
    <string name="SP_FILE_FACEBOOK_FRIENDS">com.example.sebsp.kalendreo.facebook_friends</string>
    <string name="SP_KEY_FACEBOOK_FRIENDS_JSON">com.example.sebsp.kalendreo.facebook_friends_json</string>
    <!-- END Shared Preferences Files  -->

    <string name="title_activity_my_events">My Events</string>
    <string name="title_activity_event_view">Event</string>
    <string name="error_event_start_end_time">Starting date must be before ending date</string>
    <string name="error_event_title_empty">You must fill the event title</string>
    <string name="can_not_load_event">Can\'t load event</string>
    <string name="friend_have_no_events">Your friend have no events</string>
    <string name="delete_event_dialog_title">Delete this Event</string>
    <string name="delete_event_dialog_message">Do you really want to delete this event?</string>

    <string name="from">from</string>
    <string name="to">to</string>
    <string name="share_event">Share event via …</string>


</resources>
